2007-07-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\xrefX): use \putwordSection for external
	cross-references, too.
	Report from Ludovic C, 09 Jul 2007 18:09:13.

2007-07-09  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\thissection): renamed to \lastsection.
	(\thissectionname, \thissectionnum, \evenheadingmarks, \oddheadingmarks, \evenfootingmarks, \oddfootingmarks, \everyheadingmarks, \everyfootingmarks):
	new macros.
	(\thischapter, \thischaptername, \thischapternum, \thissection, \thissectionname, \thissectionnum):
	defined these using marks.
	(\chapoddpage): omit heading and footing on blank filler pages.
	* doc/texinfo.txi (Page headings): documented
	\thissection{,name,num} and \{even,odd,every}{head,foot}ingmarks.
	* makeinfo/cmds.c (command_table): added
	{even,odd,every}{head,foot}ingmarks.

2007-07-08  Karl Berry  <karl@gnu.org>

	* makeinfo/node.c (validate_file): don't check for warning limit,
	it was hit in gnulib.
	* makeinfo/makeinfo.h (reference_warning_limit): remove.
	* makeinfo/makeinfo.c (main): ignore the option (but leave it in
	so any Makefiles or scripts that use it won't gratuitiously break).
	* doc/texinfo.txi (Invoking makeinfo): remove documentation for
	--reference-limit.

2007-07-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@copying): new Back-Cover Text.

2007-07-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Info Directories): recommend columns 32
	and 48.  Suggestion from Antonio Diaz Diaz.

2007-07-05  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\setnonasciicharscatcodenonglobal,
        \setnonasciicharscatcode): no newline after #1, that counts as a space.
	(\pagebody, \pagesizesyyy): likewise.

2007-07-03  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex: use \setcolor for color changes instead of
	\pdfsetcolor, to preserve color changes across page breaks.  Use a
	darker red (which comes out almost black in b&w print) for links
	and urls.
