@@ -1,5 +1,5 @@
 \input texinfo.tex    @c -*-texinfo-*-
-@c $Id: texinfo.txi,v 1.200 2007-07-09 20:34:30 olegkat Exp $
+@c $Id: texinfo.txi,v 1.201 2007-07-11 00:16:23 karl Exp $
 @c Ordinarily, Texinfo files have the extension .texi.  But texinfo.texi
 @c clashes with texinfo.tex on 8.3 filesystems, so we use texinfo.txi.
 
@@ -13502,7 +13502,7 @@ Specifying an encoding @var{enc} has the following effects:
 @opindex --enable-encoding
 @cindex Local Variables: section, for encoding
 @cindex Info output, and encoding
-In Info output, if the option @option{--enable-encoding} is given
+In Info output, unless the option @option{--disable-encoding} is given
 to @command{makeinfo}, a so-called `Local Variables' section
 (@pxref{File Variables,,,emacs,The GNU Emacs Manual}) is output
 including @var{enc}.  This allows Info readers to set the encoding
@@ -13513,6 +13513,11 @@ Local Variables:
 coding: @var{enc}
 End:
 @end example
+
+Also, in Info and plain text output (barring
+@option{--disable-encoding}), accent constructs and special
+characters, such as @code{@@'e}, are output as the actual 8-bit
+character in the given encoding.
 
 @cindex HTML output, and encodings
 @cindex @code{http-equiv}, and charset specification
@@ -13532,13 +13537,14 @@ given (@pxref{HTML Xref 8-bit Character Expansion}), the names of HTML
 files are formed by transliteration of the corresponding node names,
 using the specified encoding. 
 
+In XML and Docbook output, the given document encoding is written in
+the output file as usual with those formats.
+
 In @TeX{} output, the characters which are supported in the standard
 Computer Modern fonts are output accordingly.  (For example, this
 means using constructed accents rather than precomposed glyphs.)
 Using a missing character generates a warning message, as does
 specifying an unimplemented encoding.
-
-In all other cases, @code{@@documentencoding} is accepted but ignored.
 
 
 @node Defining New Texinfo Commands
@@ -15238,6 +15244,17 @@ In HTML mode, add a @samp{<link>} tag to the HTML output which
 references a cascading style sheet at @var{url}. This allows using
 standalone style sheets.
 
+@item --disable-encoding
+@itemx --enable-encoding
+@opindex --disable-encoding
+@opindex --enable-encoding
+By default, or with @option{--enable-encoding}, output accented and
+special characters in Info or plain text output based on
+@samp{@@documentencoding}.  With @option{--disable-encoding}, 7-bit
+ASCII transliterations are output.
+@xref{documentencoding,,@code{documentencoding}}, and @ref{Inserting
+Accents}.
+
 @item --docbook
 @opindex --docbook
 Generate Docbook output rather than Info.
@@ -15251,12 +15268,6 @@ specified by the @code{@@documentlanguage} command if there is one
 (@pxref{documentlanguage}), else the locale used for translations of
 @code{makeinfo}'s diagnostic messages, i.e., the @env{LANG}
 environment variable.
-
-@item --enable-encoding
-@opindex --enable-encoding
-Output accented and special characters in Info or plain text output
-based on @samp{@@documentencoding}.
-@xref{documentencoding,,@code{documentencoding}}, and @ref{Inserting Accents}.
 
 @item --error-limit=@var{limit}
 @itemx -e @var{limit}
@@ -18736,7 +18747,7 @@ Concurrent Versions System}) or RCS
 (@url{http://www.gnu.org/software/rcs}) version control systems, which
 expand it into a string such as:
 @example
-$Id: texinfo.txi,v 1.200 2007-07-09 20:34:30 olegkat Exp $
+$Id: texinfo.txi,v 1.201 2007-07-11 00:16:23 karl Exp $
 @end example
 (This is useful in all sources that use version control, not just manuals.)
 You may wish to include the @samp{$Id:} comment in the @code{@@copying}
@@ -18802,7 +18813,7 @@ Here is the sample document:
 
 @verbatim
 \input texinfo   @c -*-texinfo-*-
-@comment $Id: texinfo.txi,v 1.200 2007-07-09 20:34:30 olegkat Exp $
+@comment $Id: texinfo.txi,v 1.201 2007-07-11 00:16:23 karl Exp $
 @comment %**start of header
 @setfilename sample.info
 @include version.texi
